fix scrollbar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,14 @@ html, body {
     text-decoration:none;
     }
 
+    
+    div {
+      -ms-overflow-style: none;
+      overflow: -moz-scrollbars-none; }
+      div::-webkit-scrollbar {
+        display: none;
+        width: 0 !important; }
+    
 
     
 .swiper-slide {
